fix: S2 change z-index for burger autotest

--- a/src/Components/Navbar/Burger.css
+++ b/src/Components/Navbar/Burger.css
@@ -95,7 +95,7 @@
         height: 100vh;
         left: 0;
         top: 103px;
-        z-index: 1;
+        z-index: 89;
         transition: all 0.3s linear;
     }
 
